<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etHabitTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/etHabitDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_details"
        android:inputType="textMultiLine"
        android:minHeight="100dp" />

    <Button
        android:id="@+id/btnSaveHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_habit" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
